<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="show_password"
            type="Boolean" />

        <import type="android.text.InputType" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:layoutDirection="rtl"
        tools:context="com.smartzone.myapp.ui.login.LoginActivity">


        <TextView
            android:id="@+id/txtWelcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/neo_sans_medium"
            android:paddingTop="@dimen/_15sdp"
            android:text="@string/please_register"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/txt18"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/logo"
            android:layout_width="@dimen/_130sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/neo_sans_medium"
            android:padding="@dimen/_5sdp"
            android:src="@drawable/colorful_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtWelcome" />


        <TextView
            android:id="@+id/txtPlease"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:fontFamily="@font/neo_sans_medium"
            android:padding="@dimen/_5sdp"
            android:text="@string/title_please"
            android:textAlignment="center"
            android:textSize="@dimen/txt18"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtWelcome" />


        <EditText
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:background="@drawable/shape_rect_extra_round_transparent_bg_accent_border_1dp"
            android:fontFamily="@font/neo_sans_medium"
            android:hint="@string/title_enter_phone"
            android:inputType="phone"
            android:padding="@dimen/_10sdp"
            android:textColorHint="@color/colorPrimary"
            android:singleLine="true"
            android:textAlignment="viewStart"
            android:textSize="@dimen/txt14"
            app:layout_constraintTop_toBottomOf="@+id/logo" />


        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:background="@drawable/shape_rect_extra_round_transparent_bg_accent_border_1dp"
            android:drawableEnd="@drawable/ic_lock_24"
            android:fontFamily="@font/neo_sans_medium"
            android:textColorHint="@color/colorPrimary"
            android:inputType="textPassword"
            android:hint="@string/title_enter_password"
            android:padding="@dimen/_10sdp"
            android:singleLine="true"
            android:textAlignment="viewStart"
            android:textSize="@dimen/txt14"
            app:layout_constraintTop_toBottomOf="@+id/etPhone" />


        <TextView
            android:id="@+id/tittle_forget_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="@font/neo_sans_medium"
            android:padding="@dimen/_5sdp"
            android:text="@string/title_forget_passowrd"
            android:textAlignment="center"
            android:textColor="@color/red"
            android:textSize="@dimen/txt15"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etPassword" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:background="@drawable/shape_rect_extra_round_cnr_accent_bg_accent_border_1dp"
            android:fontFamily="@font/neo_sans_medium"
            android:gravity="center"
            android:textAlignment="center"
            android:layout_margin="@dimen/_15sdp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/txt14"
            app:layout_constraintTop_toBottomOf="@+id/tittle_forget_password" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnVisitor"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:background="@drawable/shape_rect_extra_round_cnr_red_bg_accent_border_1dp"
            android:fontFamily="@font/neo_sans_medium"
            android:layout_margin="@dimen/_15sdp"
            android:text="@string/title_visitor"
            android:textColor="@color/white"
            android:textSize="@dimen/txt13"
            android:theme="@style/Theme.MaterialComponents"
            android:visibility="visible"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin" />


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_15sdp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/btnVisitor">


            <TextView
                android:id="@+id/tittle_have_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/neo_sans_medium"
                android:padding="@dimen/_5sdp"
                android:text="@string/title_no_have_account"
                android:textSize="@dimen/txt15" />

            <TextView
                android:id="@+id/tittle_press"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/neo_sans_medium"
                android:padding="@dimen/_5sdp"
                android:text="@string/subscribe"
                android:textColor="@color/red"
                android:textSize="@dimen/txt15"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>