<?xml version="1.0" encoding="utf-8"?>
<layout>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.smartzone.myapp.ui.congratlation_ordr.DoneOrderActivity">

    <ImageView
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_150sdp"
        android:src="@drawable/finish_order"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/_80sdp"
        android:id="@+id/box" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tittle_done_send"
        app:layout_constraintTop_toBottomOf="@id/box"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_20sdp"
        android:textColor="@color/white"
        android:textSize="@dimen/_20sdp"
        android:id="@+id/tittle"
        android:fontFamily="@font/neo_sans_medium"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tittle_see_done_order"
        app:layout_constraintTop_toBottomOf="@id/tittle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_10sdp"
        android:textColor="@color/white"
        android:textSize="@dimen/_14sdp"
        android:textAlignment="center"
        android:id="@+id/tittle2"
        android:fontFamily="@font/neo_sans_medium"
        />



<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    app:layout_constraintTop_toBottomOf="@id/tittle2"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:gravity="center_horizontal"
    android:id="@+id/orderNumLayout"
    >


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tittle_order_num"
        android:layout_marginTop="@dimen/_10sdp"
        android:textColor="@color/white"
        android:textSize="@dimen/_14sdp"
        android:textAlignment="center"
        android:fontFamily="@font/neo_sans_medium" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=" : "
        android:layout_marginTop="@dimen/_10sdp"
        android:textColor="@color/white"
        android:textSize="@dimen/_14sdp"
        android:textAlignment="center"
        android:fontFamily="@font/neo_sans_medium" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:textColor="@color/white"
        android:textSize="@dimen/_14sdp"
        android:textAlignment="center"
        android:id="@+id/orderNum"
        android:fontFamily="@font/neo_sans_medium" />

</LinearLayout>

    <Button
        android:layout_width="@dimen/_200sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/orderNumLayout"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/tittle_go_to_home"
        android:textColor="@color/blueDark"
        android:textSize="@dimen/_16sdp"
        android:textAllCaps="false"
        android:id="@+id/go_to_home"
        android:background="@drawable/back_solid_gray"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>