<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="@dimen/_70sdp"
            android:layout_height="@dimen/_70sdp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:backgroundTint="@color/colorPrimary"
            android:padding="@dimen/_5sdp"
            android:src="@mipmap/ic_launcher"
            android:translationZ="@dimen/_5sdp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="@color/white"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/_10sdp"
            app:contentPadding="@dimen/_15sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:fontFamily="@font/neo_sans_medium"
                    android:gravity="center"
                    android:padding="@dimen/_5sdp"
                    android:textAlignment="center"
                    android:text="@string/please_register"
                    android:textSize="@dimen/txt20" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:orientation="horizontal"
                    android:padding="@dimen/_5sdp">

                    <Button
                        android:id="@+id/go_to_login"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:layout_marginEnd="@dimen/_5sdp"
                        android:layout_weight="1"
                        android:background="@color/colorPrimary"
                        android:fontFamily="@font/neo_sans_medium"
                        android:gravity="center"
                        android:text="@string/register"
                        android:textSize="@dimen/_10sdp"
                        android:textColor="@color/white" />

                    <Button
                        android:id="@+id/cancel"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:layout_marginEnd="@dimen/_5sdp"
                        android:layout_weight="1"
                        android:background="@color/colorPrimary"
                        android:fontFamily="@font/neo_sans_medium"
                        android:gravity="center"
                        android:text="@string/cancel"
                        android:textColor="@color/white" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>


</layout>