<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layoutDirection="rtl"
        android:background="@color/colorPrimary"
        tools:context="com.smartzone.myapp.ui.products.product_details.ProductDetailsActivity">

        <RelativeLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_60sdp"
            android:layoutDirection="ltr"
            android:background="@color/colorPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >

            <ImageView
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_centerVertical="true"
                android:id="@+id/back"
                app:tint="@color/white"
                android:layout_alignParentStart="true"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:fontFamily="@font/neo_sans_medium"
                android:src="@drawable/ic_back_primary_color"
                android:textSize="@dimen/txt20" />

            <TextView
                android:layout_width="@dimen/_120sdp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="@font/neo_sans_medium"
                android:padding="@dimen/_5sdp"
                android:text="@string/title_contactUs"
                android:textAlignment="center"
                android:textColor="@color/white" />

            <ImageView
                android:id="@+id/notification"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                app:tint="@color/white"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/_20sdp"
                android:fontFamily="@font/neo_sans_medium"
                android:src="@drawable/ic_notifications"
                android:textSize="@dimen/txt20" />

        </RelativeLayout>


        <ScrollView
            android:layout_width="match_parent"
            android:fillViewport="true"
            android:fitsSystemWindows="true"
            android:layout_height="match_parent">
            <RelativeLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/back_white_top_raduis"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:translationZ="@dimen/_5sdp"
                    android:layout_weight="1">


                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/name"
                        android:hint="@string/title_enteer_user_name"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:padding="@dimen/_10sdp"
                        android:textAlignment="viewStart"
                        android:textColor="@color/colorPrimary"
                        android:background="@drawable/shape_rect_extra_round_white_bg_green_border_1dp"
                        />


                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/_10sdp"
                        android:id="@+id/etPhone"
                        android:textColor="@color/colorPrimary"
                        android:background="@drawable/shape_rect_extra_round_white_bg_green_border_1dp"
                        android:inputType="phone|number"
                        android:textAlignment="viewStart"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:gravity="start"
                        android:hint="@string/title_enter_phone"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/_5sdp"
                        android:layout_marginStart="@dimen/_12sdp"
                        android:id="@+id/message"
                        android:inputType="textMultiLine"
                        android:maxLines="4"
                        android:lines="4"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:gravity="start"
                        android:textAlignment="viewStart"
                        android:hint="@string/title_enter_message"
                        android:layout_marginEnd="@dimen/_12sdp"
                        android:textColor="@color/colorPrimary"
                        android:background="@drawable/back_solid_shadow_blue"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:orientation="vertical">


                    <Button
                        android:id="@+id/send_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:layout_marginBottom="@dimen/_20sdp"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:background="@drawable/shape_rect_extra_round_cnr_red_bg_accent_border_1dp"
                        android:fontFamily="@font/neo_sans_medium"
                        android:text="@string/send"
                        android:textColor="@color/white" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:gravity="center"
                        android:layoutDirection="ltr">

                        <View
                            android:layout_width="0dp"
                            android:layout_height="1dp"
                            android:layout_weight="1"
                            android:background="@color/blueDark" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/neo_sans_medium"
                            android:gravity="center"
                            android:paddingStart="@dimen/_10sdp"
                            android:paddingEnd="@dimen/_10sdp"
                            android:text="@string/or"
                            android:textColor="@color/red"
                            android:textSize="@dimen/txt17" />

                        <View
                            android:layout_width="0dp"
                            android:layout_height="1dp"
                            android:layout_weight="1"
                            android:background="@color/blueDark" />


                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/neo_sans_medium"
                        android:gravity="center"
                        android:padding="@dimen/_5sdp"
                        android:text="@string/tittleSotial"
                        android:textColor="@color/red"
                        android:textSize="@dimen/txt17" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layoutDirection="ltr"
                        android:padding="@dimen/_5sdp">

                        <ImageView
                            android:id="@+id/face"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/_5sdp"
                            android:src="@drawable/facebook" />

                        <ImageView
                            android:id="@+id/whats"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/_5sdp"
                            android:src="@drawable/whatsapp" />

                        <ImageView
                            android:id="@+id/instegram"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/_5sdp"
                            android:src="@drawable/instagram" />

                        <ImageView
                            android:id="@+id/twitter"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/_5sdp"
                            android:src="@drawable/twitter"
                            android:visibility="gone" />
                    </LinearLayout>

                </LinearLayout>

            </RelativeLayout>
        </ScrollView>


    </LinearLayout>
</layout>